@@ -214,10 +214,10 @@ WHERE_AM_I = __addonpath__
 
 # Script doc constants
 __scriptname__ = "knewc"
-__version__ = '2.7.2'
+__version__ = '2.7.3'
 __author__ = 'emveepee'
 __original_author__ = 'Ton van der Poel'
-__date__ = '2019-09-13'
+__date__ = '2019-10-05'
 
 XBMC_DIALOG_BUSY_OPEN = "ActivateWindow(busydialognocancel)"
 XBMC_DIALOG_BUSY_CLOSE = "Dialog.Close(busydialognocancel)"
