@@ -1,3 +1,6 @@
+[B]2.7.3[/B]
+- fixed httplib call in python3
+
 [B]2.7.2[/B]
 - fixed transcoding API calls
 
